--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@reduxjs/toolkit": "^2.2.3",
     "axios": "^1.6.8",
     "bcryptjs": "^2.4.3",
+    "emailjs": "^4.0.3",
+    "emailjs-com": "^3.2.0",
     "mongoose": "^8.2.4",
     "mysql2": "^3.9.3",
     "next": "14.1.4",
