--- a/.env
+++ b/.env
@@ -7,3 +7,11 @@
 #DATABASE_URL="mongodb+srv://root:randompassword@cluster0.ab1cd.mongodb.net/mydb?retryWrites=true&w=majority"
 
 DATABASE_URL = mongodb+srv://yasmine:yasmine2023@cluster0.w8kiby3.mongodb.net/poissonDB?retryWrites=true&w=majority&appName=Cluster0
+
+
+
+# img = images convertis en bytes
+# date = la date où l\'image a été posté
+# user_id =  null | user_id
+# predictedClass  
+# predictedProbability
