--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@reduxjs/toolkit": "^2.2.3",
+    "@types/file-saver": "^2.0.7",
     "axios": "^1.6.8",
     "bcryptjs": "^2.4.3",
+    "browser-fs-access": "^0.35.0",
     "emailjs": "^4.0.3",
     "emailjs-com": "^3.2.0",
+    "file-saver": "^2.0.5",
     "mongoose": "^8.2.4",
     "mysql2": "^3.9.3",
     "next": "14.1.4",
